- Solution: Upgrading React and React-DOM to version 19 to match dependency requirements

## Changes Made:
1. Identified version mismatch between React (18.3.1) and @react-three/fiber/drei (requires React 19)
2. Successfully upgraded packages:
   - react: 18.3.1 → 19.2.1
   - react-dom: 18.3.1 → 19.2.1
   - @types/react: 18.3.3 → latest
   - @types/react-dom: 18.3.0 → latest
3. Restarted dev server - Vite re-optimized dependencies
4. Error resolved - all dependencies now compatible

## Status: ✅ RESOLVED
- Dev server running successfully on http://localhost:5173/
- All React Three Fiber components should now work properly

## Server Network Exposure (2025-12-10 09:51)
1. Stopped all running Node.js processes using taskkill command
2. Restarted Vite dev server with --host flag to expose to local network
3. Server now accessible at:
   - Local: http://localhost:5173/
   - Network: http://192.168.1.5:5173/
4. Other devices on the same network can now access the portfolio

## Git Repository Update (2025-12-10 10:02)
1. Staged changes.txt file with git add
2. Committed changes with message: "Update changes log: Add server network exposure configuration"
3. Pushed to GitHub repository: https://github.com/aliabbas6622/portfolio.git
4. Commit hash: c1f91a9
5. Successfully updated remote repository (main branch)

## Vercel Deployment Fix (2025-12-10 10:04)
**Issue**: Deployment failed with error "vite: command not found"
**Root Cause**: Vite and other build dependencies were in devDependencies, which Vercel doesn't install in production builds

**Solution**:
1. Moved critical build dependencies from devDependencies to dependencies:
   - vite: ^5.4.1
   - typescript: ^5.5.3
   - @vitejs/plugin-react: ^4.3.1
   - @types/react: ^19.2.7
   - @types/react-dom: ^19.2.3
2. Committed changes with message: "Fix Vercel deployment: Move build dependencies to production"
3. Pushed to GitHub (commit hash: 977cdcb)
4. Vercel will now automatically redeploy with correct dependencies